--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -9,17 +9,23 @@ body {
 }
 
 form {
-  /* background-color: red; */
   width: 40%;
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 40px 20px;
   border-radius: 8px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .divDescription {
   display: flex;
   flex-direction: column;
+  margin: 10px 0;
+}
+
+.divDescription label{
+  font-size: 14px;
   margin: 10px 0;
 }
 
@@ -31,12 +37,17 @@ form {
   margin: 0 ;
   width: 91%;
   border-radius: 8px;
+  background-color: #E9ECEF;
 }
 
 .divTipo-valor {
   display: flex;
   margin-bottom: 20px;
   gap: 50px;
+}
+
+.divTipo-valor label{
+  font-size: 14px;
 }
 
 .inputValor{
@@ -50,22 +61,29 @@ form {
 .inputValor input {
   outline: #fd377e;
   border: none;
-  background-color: transparent;
+  background-color: #E9ECEF;
 }
 
 .valor{
-  width: 40%;
+  width: 20%;
 }
 
 .valor input{
-  padding: 10px 20px;
+  padding: 10px 10px;
+  width: 110px;
+  border-radius: 8px;
+}
+
+.tipo{
+  margin: 0 20px;
 }
 
 .tipo select{
   border: none;
   outline: #fd377e;
-  width: 80%;
+  width: 95%;
   padding: 10px 10px;
+  background-color: #E9ECEF;
   border-radius: 8px;
 }
 
